--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -15,7 +15,7 @@
     <header class="uq-header" data-gtm-category="Header">
       <div class="uq-header__container">
         <div class="uq-header__menu-toggle" data-gtm-category="Primary header">
-          <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="toggle">Menu</button>
+          <button type="button" class="nav-primary__toggle nav-primary__menu-toggle slide-menu__control" data-target="global-mobile-nav" data-action="Toggle">Menu</button>
         </div>
         <div class="uq-header__logo" data-gtm-category="Primary header">
           <a class="logo--large" href="https://www.uq.edu.au/" data-gtm-label="UQ Logo">
@@ -569,7 +569,7 @@
         <nav class="uq-footer__navigation uq-footer--mobile">
           <ul class="uq-accordion uq-footer__navigation-list uq-footer__navigation-level-1">
             <li class="uq-accordion__item uq-footer__navigation-item uq-footer__navigation--is-open">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="toggle">Media</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Media</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://marketing-communication.uq.edu.au/contact" class="uq-footer__navigation-link">Media team contacts</a>
@@ -583,7 +583,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="toggle">Staff</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Staff</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://staff.uq.edu.au/" class="uq-footer__navigation-link">Current Staff</a>
@@ -603,7 +603,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="toggle">Current students</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Current students</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://my.uq.edu.au/" class="uq-footer__navigation-link">my.UQ</a>
@@ -623,7 +623,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="toggle">Library</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Library</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://www.library.uq.edu.au/" class="uq-footer__navigation-link">Library</a>
@@ -631,7 +631,7 @@
               </ul>
             </li>
             <li class="uq-accordion__item uq-footer__navigation-item">
-              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="toggle">Contact</button>
+              <button class="uq-accordion__toggle uq-footer__navigation-toggle" data-action="Toggle">Contact</button>
               <ul class="uq-accordion__content uq-footer__navigation-list uq-footer__navigation-level-2">
                 <li class="uq-footer__navigation-item">
                   <a href="https://contacts.uq.edu.au/contacts" class="uq-footer__navigation-link">UQ Contact</a>
